src/test/deca/context/invalid/provided/mult_float_int.deca
/*/ Description:
//    Multiplication entre deux types incompatibles
//
// Resultats:
//    Ligne 16: Erreur contextuelle.
// 
// Historique:
//    cree le 01/01/2022*/

{
   int a;
   float b;

   // Doit etre refuse.
   println(a*b);
}
